# customskin-0.3.7-R5

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
docs/: protocol.md
src/: dllmain.cpp
src/core/: log.cpp  log.h  samp.cpp  samp.h
src/game/: gta.h  render.cpp  render.h  rwmodel.cpp  rwmodel.h
src/model/: cache.cpp  cache.h  crc32.cpp  crc32.h  download.cpp  download.h
src/net/: artwork.cpp  artwork.h  dlcompat.cpp  dlcompat.h  masquerade.cpp  masquerade.h  nativeart.cpp  nativeart.h  raknet.cpp  raknet.h
test/: .gitignore  README.md  config.json  make-models.sh  pawn.json
test/gamemodes/: test.pwn
tools/: lowercase_comments.py  oneline_comments.py
